FreeBuildJ/net/cemetech/sfgp/ldraw/LDrawParser.java
// Generated from /Users/thomas/FreeBuild/FreeBuildJ/net/cemetech/sfgp/ldraw/LDrawParser.g4 by ANTLR 4.1
package net.cemetech.sfgp.ldraw;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LDrawParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ORIENTATION=34, FOUR=2, CLIPPING=35, EDGE=21, NO=32, RUBBER=26, STEP=12, 
		SAVE=17, PEARLESCENT=25, FLOAT=9, INT=8, ONE=5, HEXINT=7, TWO=4, VALUE=20, 
		LUMINANCE=23, FILE=30, WRITE=14, PRINT=15, ALPHA=22, ZERO=6, CLEAR=16, 
		CODE=19, METAL=28, GARBAGE=39, MATTE_METALLIC=27, EOL=11, WS=10, PAUSE=13, 
		BFC=31, FIVE=1, CHROME=24, INVERTNEXT=36, CERTIFICATION=33, IDENT=37, 
		MATERIAL=29, COLOUR=18, THREE=3, STRING=38;
	public static final String[] tokenNames = {
		"<INVALID>", "'5'", "'4'", "'3'", "'2'", "'1'", "'0'", "HEXINT", "INT", 
		"FLOAT", "WS", "EOL", "'STEP'", "'PAUSE'", "WRITE", "'PRINT'", "'CLEAR'", 
		"'SAVE'", "COLOUR", "'CODE'", "'VALUE'", "'EDGE'", "'ALPHA'", "'LUMINANCE'", 
		"'CHROME'", "'PEARLESCENT'", "'RUBBER'", "'MATTE_METALLIC'", "'METAL'", 
		"'MATERIAL'", "'FILE'", "'BFC'", "'NO'", "'CERTIFY'", "ORIENTATION", "'CLIP'", 
		"'INVERTNEXT'", "IDENT", "STRING", "GARBAGE"
	};
	public static final int
		RULE_parsedModel = 0, RULE_mpdModel = 1, RULE_mpdEmbeddedModel = 2, RULE_mpdDiscard = 3, 
		RULE_ldrdatModel = 4, RULE_ldrawLines = 5, RULE_ldrawStmt = 6, RULE_decInt = 7, 
		RULE_number = 8, RULE_stepLine = 9, RULE_pauseLine = 10, RULE_writeLine = 11, 
		RULE_clearLine = 12, RULE_colorNum = 13, RULE_colorLine = 14, RULE_mpdFileLine = 15, 
		RULE_mpdNoFileLine = 16, RULE_bfcMetaLine = 17, RULE_bfcCert = 18, RULE_bfcNoCert = 19, 
		RULE_bfcClipWind = 20, RULE_bfcNoClip = 21, RULE_bfcPrefix = 22, RULE_saveLine = 23, 
		RULE_keyWord = 24, RULE_name = 25, RULE_commentLine = 26, RULE_transMatrix = 27, 
		RULE_position = 28, RULE_objectLine = 29, RULE_lineLine = 30, RULE_triLine = 31, 
		RULE_quadLine = 32, RULE_fiveLine = 33, RULE_unkeyWord = 34, RULE_word = 35, 
		RULE_words = 36, RULE_blankLine = 37;
	public static final String[] ruleNames = {
		"parsedModel", "mpdModel", "mpdEmbeddedModel", "mpdDiscard", "ldrdatModel", 
		"ldrawLines", "ldrawStmt", "decInt", "number", "stepLine", "pauseLine", 
		"writeLine", "clearLine", "colorNum", "colorLine", "mpdFileLine", "mpdNoFileLine", 
		"bfcMetaLine", "bfcCert", "bfcNoCert", "bfcClipWind", "bfcNoClip", "bfcPrefix", 
		"saveLine", "keyWord", "name", "commentLine", "transMatrix", "position", 
		"objectLine", "lineLine", "triLine", "quadLine", "fiveLine", "unkeyWord", 
		"word", "words", "blankLine"
	};

	@Override
	public String getGrammarFileName() { return "LDrawParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public LDrawParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParsedModelContext extends ParserRuleContext {
		public LdrdatModelContext ldrdatModel() {
			return getRuleContext(LdrdatModelContext.class,0);
		}
		public MpdModelContext mpdModel() {
			return getRuleContext(MpdModelContext.class,0);
		}
		public ParsedModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsedModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterParsedModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitParsedModel(this);
		}
	}

	public final ParsedModelContext parsedModel() throws RecognitionException {
		ParsedModelContext _localctx = new ParsedModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parsedModel);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); mpdModel();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77); ldrdatModel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MpdModelContext extends ParserRuleContext {
		public List<MpdEmbeddedModelContext> mpdEmbeddedModel() {
			return getRuleContexts(MpdEmbeddedModelContext.class);
		}
		public MpdEmbeddedModelContext mpdEmbeddedModel(int i) {
			return getRuleContext(MpdEmbeddedModelContext.class,i);
		}
		public MpdModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mpdModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterMpdModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitMpdModel(this);
		}
	}

	public final MpdModelContext mpdModel() throws RecognitionException {
		MpdModelContext _localctx = new MpdModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mpdModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80); mpdEmbeddedModel();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ZERO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MpdEmbeddedModelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LDrawParser.EOF, 0); }
		public LdrdatModelContext ldrdatModel() {
			return getRuleContext(LdrdatModelContext.class,0);
		}
		public MpdFileLineContext mpdFileLine() {
			return getRuleContext(MpdFileLineContext.class,0);
		}
		public MpdNoFileLineContext mpdNoFileLine() {
			return getRuleContext(MpdNoFileLineContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(LDrawParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(LDrawParser.EOL, i);
		}
		public MpdDiscardContext mpdDiscard() {
			return getRuleContext(MpdDiscardContext.class,0);
		}
		public MpdEmbeddedModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mpdEmbeddedModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterMpdEmbeddedModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitMpdEmbeddedModel(this);
		}
	}

	public final MpdEmbeddedModelContext mpdEmbeddedModel() throws RecognitionException {
		MpdEmbeddedModelContext _localctx = new MpdEmbeddedModelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mpdEmbeddedModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); mpdFileLine();
			setState(86); match(EOL);
			setState(87); ldrdatModel();
			setState(92);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(88); mpdNoFileLine();
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==EOL) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(90); mpdDiscard();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MpdDiscardContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(LDrawParser.EOL); }
		public TerminalNode GARBAGE(int i) {
			return getToken(LDrawParser.GARBAGE, i);
		}
		public TerminalNode EOL(int i) {
			return getToken(LDrawParser.EOL, i);
		}
		public List<TerminalNode> GARBAGE() { return getTokens(LDrawParser.GARBAGE); }
		public LdrawStmtContext ldrawStmt(int i) {
			return getRuleContext(LdrawStmtContext.class,i);
		}
		public List<LdrawStmtContext> ldrawStmt() {
			return getRuleContexts(LdrawStmtContext.class);
		}
		public MpdDiscardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mpdDiscard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterMpdDiscard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitMpdDiscard(this);
		}
	}

	public final MpdDiscardContext mpdDiscard() throws RecognitionException {
		MpdDiscardContext _localctx = new MpdDiscardContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mpdDiscard);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					setState(98);
					switch (_input.LA(1)) {
					case GARBAGE:
						{
						setState(94); match(GARBAGE);
						}
						break;
					case FIVE:
					case FOUR:
					case THREE:
					case TWO:
					case ONE:
					case ZERO:
					case EOL:
						{
						{
						setState(95); ldrawStmt();
						setState(96); match(EOL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdrdatModelContext extends ParserRuleContext {
		public LdrawLinesContext ldrawLines() {
			return getRuleContext(LdrawLinesContext.class,0);
		}
		public LdrdatModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldrdatModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterLdrdatModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitLdrdatModel(this);
		}
	}

	public final LdrdatModelContext ldrdatModel() throws RecognitionException {
		LdrdatModelContext _localctx = new LdrdatModelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ldrdatModel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); ldrawLines();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdrawLinesContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(LDrawParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(LDrawParser.EOL, i);
		}
		public LdrawStmtContext ldrawStmt(int i) {
			return getRuleContext(LdrawStmtContext.class,i);
		}
		public List<LdrawStmtContext> ldrawStmt() {
			return getRuleContexts(LdrawStmtContext.class);
		}
		public LdrawLinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldrawLines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterLdrawLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitLdrawLines(this);
		}
	}

	public final LdrawLinesContext ldrawLines() throws RecognitionException {
		LdrawLinesContext _localctx = new LdrawLinesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ldrawLines);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105); ldrawStmt();
			setState(108); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(106); match(EOL);
					setState(107); ldrawStmt();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(112); match(EOL);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdrawStmtContext extends ParserRuleContext {
		public TriLineContext triLine() {
			return getRuleContext(TriLineContext.class,0);
		}
		public LineLineContext lineLine() {
			return getRuleContext(LineLineContext.class,0);
		}
		public StepLineContext stepLine() {
			return getRuleContext(StepLineContext.class,0);
		}
		public WriteLineContext writeLine() {
			return getRuleContext(WriteLineContext.class,0);
		}
		public ClearLineContext clearLine() {
			return getRuleContext(ClearLineContext.class,0);
		}
		public ColorLineContext colorLine() {
			return getRuleContext(ColorLineContext.class,0);
		}
		public QuadLineContext quadLine() {
			return getRuleContext(QuadLineContext.class,0);
		}
		public FiveLineContext fiveLine() {
			return getRuleContext(FiveLineContext.class,0);
		}
		public PauseLineContext pauseLine() {
			return getRuleContext(PauseLineContext.class,0);
		}
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public BlankLineContext blankLine() {
			return getRuleContext(BlankLineContext.class,0);
		}
		public BfcMetaLineContext bfcMetaLine() {
			return getRuleContext(BfcMetaLineContext.class,0);
		}
		public ObjectLineContext objectLine() {
			return getRuleContext(ObjectLineContext.class,0);
		}
		public SaveLineContext saveLine() {
			return getRuleContext(SaveLineContext.class,0);
		}
		public LdrawStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldrawStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterLdrawStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitLdrawStmt(this);
		}
	}

	public final LdrawStmtContext ldrawStmt() throws RecognitionException {
		LdrawStmtContext _localctx = new LdrawStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ldrawStmt);
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118); stepLine();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); pauseLine();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120); writeLine();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121); clearLine();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122); saveLine();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123); objectLine();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(124); lineLine();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(125); triLine();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(126); quadLine();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(127); fiveLine();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(128); colorLine();
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(129); bfcMetaLine();
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(130); blankLine();
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(131); commentLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecIntContext extends ParserRuleContext {
		public TerminalNode FIVE() { return getToken(LDrawParser.FIVE, 0); }
		public TerminalNode ZERO() { return getToken(LDrawParser.ZERO, 0); }
		public TerminalNode FOUR() { return getToken(LDrawParser.FOUR, 0); }
		public TerminalNode INT() { return getToken(LDrawParser.INT, 0); }
		public TerminalNode TWO() { return getToken(LDrawParser.TWO, 0); }
		public TerminalNode ONE() { return getToken(LDrawParser.ONE, 0); }
		public TerminalNode THREE() { return getToken(LDrawParser.THREE, 0); }
		public DecIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterDecInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitDecInt(this);
		}
	}

	public final DecIntContext decInt() throws RecognitionException {
		DecIntContext _localctx = new DecIntContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decInt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FIVE) | (1L << FOUR) | (1L << THREE) | (1L << TWO) | (1L << ONE) | (1L << ZERO) | (1L << INT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(LDrawParser.FLOAT, 0); }
		public DecIntContext decInt() {
			return getRuleContext(DecIntContext.class,0);
		}
		public TerminalNode HEXINT() { return getToken(LDrawParser.HEXINT, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_number);
		int _la;
		try {
			setState(138);
			switch (_input.LA(1)) {
			case HEXINT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				_la = _input.LA(1);
				if ( !(_la==HEXINT || _la==FLOAT) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case FIVE:
			case FOUR:
			case THREE:
			case TWO:
			case ONE:
			case ZERO:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(137); decInt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepLineContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(LDrawParser.ZERO, 0); }
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public TerminalNode STEP() { return getToken(LDrawParser.STEP, 0); }
		public StepLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterStepLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitStepLine(this);
		}
	}

	public final StepLineContext stepLine() throws RecognitionException {
		StepLineContext _localctx = new StepLineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stepLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(ZERO);
			setState(141); match(STEP);
			setState(142); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PauseLineContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(LDrawParser.ZERO, 0); }
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public TerminalNode PAUSE() { return getToken(LDrawParser.PAUSE, 0); }
		public PauseLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pauseLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterPauseLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitPauseLine(this);
		}
	}

	public final PauseLineContext pauseLine() throws RecognitionException {
		PauseLineContext _localctx = new PauseLineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pauseLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(ZERO);
			setState(145); match(PAUSE);
			setState(146); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteLineContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(LDrawParser.ZERO, 0); }
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public TerminalNode WRITE() { return getToken(LDrawParser.WRITE, 0); }
		public WriteLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterWriteLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitWriteLine(this);
		}
	}

	public final WriteLineContext writeLine() throws RecognitionException {
		WriteLineContext _localctx = new WriteLineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_writeLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(ZERO);
			setState(149); match(WRITE);
			setState(150); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClearLineContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(LDrawParser.ZERO, 0); }
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public TerminalNode CLEAR() { return getToken(LDrawParser.CLEAR, 0); }
		public ClearLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clearLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterClearLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitClearLine(this);
		}
	}

	public final ClearLineContext clearLine() throws RecognitionException {
		ClearLineContext _localctx = new ClearLineContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_clearLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(ZERO);
			setState(153); match(CLEAR);
			setState(154); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorNumContext extends ParserRuleContext {
		public DecIntContext decInt() {
			return getRuleContext(DecIntContext.class,0);
		}
		public TerminalNode HEXINT() { return getToken(LDrawParser.HEXINT, 0); }
		public ColorNumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colorNum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).enterColorNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LDrawParserListener ) ((LDrawParserListener)listener).exitColorNum(this);
		}
	}

	public final ColorNumContext colorNum() throws RecognitionException {
		ColorNumContext _localctx = new ColorNumContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_colorNum);
		try {
			setState(158);
			switch (_input.LA(1)) {
			case FIVE:
			case FOUR:
			case THREE:
			case TWO:
			case ONE:
			case ZERO:
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(156); decInt();
				}
				break;
			case HEXINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(157); match(HEXINT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
